[project]
name = "app"
version = "0.1.0"
description = "this is project to expose api to convert document file to markdown text"
authors = [{ name = "thonconnordev", email = "thonconnor.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "markitdown[all] (>=0.1.3,<0.2.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
